Ejercicios_11_a_15/Ejercicio_13/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'INSERT'", "'INTO'", "'TABLE'", 
                     "'VALUES'", "'SERIAL'", "'PRIMARY'", "'KEY'", "'VARCHAR'", 
                     "'NOT'", "'NULL'", "'INTEGER'", "'DATE'", "'SELECT'", 
                     "'FROM'", "'INNER'", "'JOIN'", "'WHERE'", "'{'", "'}'", 
                     "'('", "')'", "'['", "']'", "'='", "';'", "','", "'.'", 
                     "'''" ]

    symbolicNames = [ "<INVALID>", "CREATE", "INSERT", "INTO", "TABLE", 
                      "VALUES", "SERIAL", "PRIMARY", "KEY", "VARCHAR", "NOT", 
                      "NULL", "INTEGER", "DATE", "SELECT", "FROM", "INNER", 
                      "JOIN", "WHERE", "LLA_IZQ", "LLA_DER", "PAR_IZQ", 
                      "PAR_DER", "COR_IZQ", "COR_DER", "ASIGN", "SEMICOL", 
                      "COMA", "PUNTO", "COMILLA", "STRING", "NUM", "ID", 
                      "ALIAS", "WS" ]

    RULE_root = 0
    RULE_expr = 1

    ruleNames =  [ "root", "expr" ]

    EOF = Token.EOF
    CREATE=1
    INSERT=2
    INTO=3
    TABLE=4
    VALUES=5
    SERIAL=6
    PRIMARY=7
    KEY=8
    VARCHAR=9
    NOT=10
    NULL=11
    INTEGER=12
    DATE=13
    SELECT=14
    FROM=15
    INNER=16
    JOIN=17
    WHERE=18
    LLA_IZQ=19
    LLA_DER=20
    PAR_IZQ=21
    PAR_DER=22
    COR_IZQ=23
    COR_DER=24
    ASIGN=25
    SEMICOL=26
    COMA=27
    PUNTO=28
    COMILLA=29
    STRING=30
    NUM=31
    ID=32
    ALIAS=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.expr()
            self.state = 5
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





